err/7297931.1.err
  File "condor_coffea_WS.py", line 86
    """)
      ^
SyntaxError: invalid syntax
xrdcp: No such file or directory processing tree_1.root
